# tuipo

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
assets/: default_dict.txt
src/: buffer.rs  config.rs  config_tui.rs  debug.rs  dict.rs  echo.rs  event.rs  fix.rs  init.rs  input.rs  main.rs  paint.rs  picker.rs  pty.rs  screen.rs  spell.rs  status.rs  term.rs
tests/: passthrough.rs
